<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Auth -->
    <string name="twitter_consumer_key">fdH9TALRC3BGEYqv93CJQX8RZ</string>
    <string name="twitter_consumer_secret">cBwyPT1AarcxKswzFhDC0ZJ4SwUEcqgNJi6W2oy7SlaesjjyNF</string>
    <string name="twitter_callback_url">cospradar://twitter</string>
    <string name="google_play_service_unavailable">Application is not compatible with Google Play Service and could not be run.</string>

    <!-- Common -->
    <string name="app_name">Cosradar</string>
    <string name="ok">OK</string>
    <string name="sending">Sending...</string>
    <string name="loading">Loading...</string>
    <string name="invalidate_input">An error was found in the data.</string>
    <string name="not_changed_input">The data was not changed.</string>
    <string name="send">Send</string>
    <string name="back_btn_msg">Click on the Back button again to close.</string>
    <string name="close">Close</string>
    <string name="done">Finished</string>
    <string name="confirm">Are you sure?</string>
    <string name="confirmation">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="menu">Menu</string>
    <string name="logout">Log out</string>
    <string name="logout_done">Logged out.</string>
    <string name="logout_confirm">Do you really want to log out?</string>
    <string name="version_prefix">V%1$s</string>
    <string name="next">Next</string>
    <string name="prev">Previous</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="after">Later</string>
    <string name="regist">Register</string>
    <string name="error_raised">An error has occurred.</string>

    <!-- Login -->
    <string name="login_twitter">Login with Twitter</string>
    <string name="login_description">Let\'s search for cosplayers with the radar!</string>
    <string name="login_succeeded">Logged in successfully.</string>
    <string name="login_failed">Log in failed.</string>
    <string name="login_terms_confirmation">By logging in you accept the following &lt;a href=\'#\'>Terms of Service&lt;/a>.</string>

    <!-- Time -->
    <string name="time_just_now">Right now</string>
    <string name="time_1second_ago">1 second ago</string>
    <string name="time_seconds_ago">%1$d seconds ago</string>
    <string name="time_1minute_ago">1 minute ago</string>
    <string name="time_minutes_ago">%1$d minutes ago</string>
    <string name="time_1hour_ago">1 hour ago</string>
    <string name="time_hours_ago">%1$d hours ago</string>

    <!-- Photo -->
    <string name="choose_from_gallery">Choose from gallery</string>
    <string name="choose_from_camera">Capture with camera</string>

    <!-- Search -->
    <string name="search_list_nothing">Sorry, there are no cosplayers nearby.</string>
    <string name="search_hint">Search by title</string>
    <string name="search_start">Start</string>
    <string name="radar_distance">%1$s km</string>
    <string name="radar_distance_meter">%1$s m</string>
    <string name="searching">Searching...</string>

    <plurals name="search_result_count">
        <item quantity="one">%1$d cosplayer was found! ^o^</item>
        <item quantity="other">%1$d cosplayers were found! ^o^</item>
    </plurals>

    <string name="search_result_count_zero">There are no cosplayers nearby.</string>

    <plurals name="search_dialog_count">
        <item quantity="one">There\'s %1$d cosplayer.</item>
        <item quantity="other">There are %1$d cosplayers.</item>
    </plurals>

    <string name="search_realtime">Now Cosplaying!</string>

    <!-- CharacterCreate -->
    <string name="charactor_setting">Add new character</string>
    <string name="charactor_name">Character name (mandatory)</string>
    <string name="charactor_title">Title (mandatory)</string>
    <string name="charactor_validate_name">You forgot to enter the name of the character.</string>
    <string name="charactor_validate_title">You forgot to enter the title of the work.</string>
    <string name="charactor_create_succeeded">Character added successfully!</string>
    <string name="charactor_edit_succeeded">Character edited successfully!</string>
    <string name="charactor_delete_succeeded">Character deleted successfully!</string>
    <string name="charactor_edit_failed">Error while adding the character...\nWould you please try again?</string>
    <string name="charactor_delete_failed">Error while deleting the character...</string>

    <!-- EditSuggest -->
    <string name="setting_suggest_title">Character registration needed.</string>
    <string name="setting_suggest_message">If you register a cosplay character now, you\'ll be able to use the chatboard.</string>
    <string name="setting_suggest_ok">Register</string>
    <string name="setting_suggest_cancel">Later</string>
    <string name="charactor_set_suggest_title">Are you cosplaying?</string>
    <string name="charactor_set_suggest_msg">Maybe you\'re cosplaying right now?\nIf so, why not set the character you\'re cosplaying as? ^_^</string>
    <string name="charactor_set_suggest_check">Don\'t ask again today.</string>

    <!-- Profile -->
    <string name="profile">Profile</string>
    <string name="profile_add">Add new cosplay character.</string>
    <string name="profile_chat">Chatboard</string>
    <string name="profile_charactor_edit">Edit cosplay character.</string>
    <string name="profile_charactor_delete">Delete cosplay character.</string>
    <string name="profile_delete_confirm">Are you sure you want to delete this character?</string>
    <string name="profile_charactor_enabled">I\'m cosplaying now</string>
    <string name="profile_charactor_enabled_question">Are you cosplaying now?</string>
    <string name="profile_charactor_disable_confirm_msg">Are you finished with this cosplay for today?</string>
    <string name="profile_charactor_enable_confirm_msg">Are you cosplaying %1$s right now? ^_^</string>
    <string name="profile_no_charactor">You didn\'t register any character. Want to register a new one now?</string>
    <string name="profile_charactor_regist">Register</string>
    <string name="profile_title">%1$s (%2$s)</string>

    <!-- CharactorChooser -->
    <string name="charactor_chooser">Set character</string>
    <string name="charactor_chooser_not_selected">You didn\'t set any character.</string>
    <string name="charactor_chooser_selected">Character has been set.</string>
    <string name="charactor_reset_suggestion">%1$d hours have passed since you told us you were cosplaying this character. Did you take off your cosplay already? :3</string>

    <!-- Comment -->
    <string name="comment_hint">Write a comment</string>
    <string name="comment_send_failed">Error while sending the comment...\nwould you please try again?</string>
    <string name="comment_nothing">Looks like there are no comments yet!</string>
    <string name="comment_chats">Chatboard comments</string>
    <string name="comment_close_confirm">Comment will be discarded. Are you sure?</string>
    <string name="comment_dialog_title">Which character do you want to comment as?</string>
    <string name="comment_dialog_selected">Now commenting as %1$s.</string>

    <!-- Setting -->
    <string name="setting">Settings</string>
    <string name="setting_charactor">Character</string>
    <string name="setting_support">Support</string>
    <string name="setting_charactor_add">Add new character</string>
    <string name="setting_charactor_set">Set current character</string>
    <string name="setting_evaluate">Evaluate</string>
    <string name="setting_share">Share</string>
    <string name="setting_tutorial">View tutorial</string>
    <string name="setting_inquery">Inquiries</string>
    <string name="setting_terms">Terms of Service</string>
    <string name="setting_privacy">Privacy policy</string>
    <string name="setting_account_delete">Account deletion</string>
    <string name="setting_account_delete_confirm_title">Do you want to delete your account?</string>
    <string name="setting_account_delete_confirm">If you choose to delete your account, your profile and characters will be automatically hidden. It\'s possible to restore the account if you log in within 30 days after deletion. After 30 days, the account will be permanently deleted from our servers.</string>
    <string name="setting_account_delete_ok">Delete account</string>
    <string name="setting_inquery_subject">Inquiry - %1$s</string>
    <string name="setting_inquery_message">"\nUser ID: %1$s\nApplication Version: %2$s</string>
    <string name="setting_inquery_menu_improvement">Send a suggestion</string>
    <string name="setting_inquery_menu_question">Send a question</string>
    <string name="setting_inquery_menu_cheer">Send a support message</string>
    <string name="setting_inquery_menu_bug">Inform about an error</string>
    <string name="setting_inquery_menu_other">Other</string>

    <!-- Rating -->
    <string name="rating_title">Please evaluate %1$s!</string>
    <string name="rating_msg">Thank you very much for your support. If you don\'t mind, please write a comment for %1$s too!</string>
    <string name="rating_notification">Hello, %1$s! Would you like to evaluate %2$s at Google Play?</string>
    <string name="rating_after_msg">Thank you very much for your rating!</string>

    <!-- Tutorial -->
    <string name="tutorial_welcome_title">Hello, %1$s</string>
    <string name="tutorial_welcome_sub">Welcome %1$s! We\'ll guide you on how to use this application easily.</string>
    <string name="tutorial_question_title">Let\'s start with an easy question.</string>
    <string name="tutorial_question_sub">Have you ever cosplayed, %1$s?</string>
    <string name="tutorial_regist_ready_title">So you\'re already a cosplayer!</string>
    <string name="tutorial_regist_ready_sub">Then let\'s register one of the characters you\'ve cosplayed as, %1$s!</string>
    <string name="tutorial_regist_title">You\'ve registered your first cosplay!</string>
    <string name="tutorial_after_regist_title">Congratulations! You\'ve successfully registered your first cosplay!</string>
    <string name="tutorial_after_regist_sub">You can edit the character details later.</string>
    <string name="tutorial_finish_title">Now let\'s try tapping the Cosradar!</string>
    <string name="tutorial_finish_sub">It\'d be nice to find characters from your favourite series and games, right? ^_^</string>
    <string name="tutorial_seethrough1">Let\'s tap the yellow button! You\'ll be able to find cosplayers with the radar.</string>
    <string name="tutorial_seethrough2">You can also refine your search by title.</string>
    <string name="tutorial_seethrough3">Check the option \'Now Cosplaying!\' if you want to find out who\'s cosplaying around you right now!</string>
    <string name="tutorial_seethrough4">By moving this bar you can change the radar\'s search radius.</string>

    <!-- Share -->
    <string name="share">Share</string>
    <string name="share_dialog_sub">Would you like to recommend us to your cosplay-loving friends?</string>
    <string name="share_title">If you love cosplay, you\'ll love Cosradar!</string>
    <string name="share_msg">With Cosradar you\'ll be able to easily find cosplayers from your favourite series and games! Bring more fun to your cosplay events and conventions!</string>
    <string name="share_success">Shared!</string>
    <string name="share_failed">Failed to share.</string>
    <string name="share_app_not_found">Application could not be found.</string>

    <!-- Gcm -->
    <string name="gcm_chatboard_mine_commented">Someone left a message on your chatboard!</string>
    <string name="gcm_chatboard_commented">Someone left a message in a chatboard you commented on!</string>

</resources>