<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@color/bg_white" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/txt_title_charactor"
                style="@style/SettingTitle"
                android:text="@string/setting_charactor" />

            <View style="@style/SettingTitleDivider" />

            <TextView
                android:id="@+id/txt_item_charactor_add"
                style="@style/SettingItem"
                android:text="@string/setting_charactor_add" />

            <View style="@style/SettingItemDivider" />

            <TextView
                android:id="@+id/txt_item_charactor_set"
                style="@style/SettingItem"
                android:text="@string/setting_charactor_set" />

            <View style="@style/SettingItemDivider" />

            <TextView
                android:id="@+id/txt_title_support"
                style="@style/SettingTitle"
                android:layout_marginTop="30dp"
                android:text="@string/setting_support" />

            <View style="@style/SettingTitleDivider" />

            <TextView
                android:id="@+id/txt_item_evaluate"
                style="@style/SettingItem"
                android:text="@string/setting_evaluate" />

            <View style="@style/SettingItemDivider" />

            <TextView
                android:id="@+id/txt_item_share"
                style="@style/SettingItem"
                android:text="@string/setting_share" />

            <View style="@style/SettingItemDivider" />

            <TextView
                android:id="@+id/txt_item_tutorial"
                style="@style/SettingItem"
                android:text="@string/setting_tutorial" />

            <View style="@style/SettingItemDivider" />

            <TextView
                android:id="@+id/txt_item_inquery"
                style="@style/SettingItem"
                android:text="@string/setting_inquery" />

            <View style="@style/SettingItemDivider" />

            <TextView
                android:id="@+id/txt_item_terms"
                style="@style/SettingItem"
                android:text="@string/setting_terms" />

            <View style="@style/SettingItemDivider" />

            <TextView
                android:id="@+id/txt_item_privacy"
                style="@style/SettingItem"
                android:text="@string/setting_privacy" />

            <View style="@style/SettingItemDivider" />

            <TextView
                android:id="@+id/txt_item_account_delete"
                style="@style/SettingItem"
                android:text="@string/setting_account_delete"
                android:visibility="gone" />

            <View
                style="@style/SettingItemDivider"
                android:visibility="gone" />

            <TextView
                android:id="@+id/btn_logout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_large"
                android:layout_marginLeft="@dimen/margin_large"
                android:layout_marginRight="@dimen/margin_large"
                android:layout_marginTop="30dp"
                android:background="@drawable/btn_red_rounded"
                android:clickable="true"
                android:gravity="center_horizontal"
                android:padding="@dimen/padding_large"
                android:text="@string/logout"
                android:textColor="@color/text_white"
                android:textSize="@dimen/text_medium"
                android:textStyle="bold" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/margin_large" >

                <ImageView
                    android:id="@+id/img_icon"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_centerInParent="true"
                    android:layout_marginLeft="@dimen/margin_small"
                    android:layout_marginRight="@dimen/margin_small"
                    android:gravity="center_vertical"
                    android:src="@drawable/ic_app" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_toLeftOf="@id/img_icon"
                    android:ellipsize="end"
                    android:gravity="center_vertical"
                    android:lines="1"
                    android:text="@string/app_name"
                    android:textColor="@color/text_gray"
                    android:textSize="@dimen/text_medium" />

                <TextView
                    android:id="@+id/txt_version"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_toRightOf="@id/img_icon"
                    android:ellipsize="end"
                    android:gravity="center_vertical"
                    android:lines="1"
                    android:textColor="@color/text_gray"
                    android:textSize="@dimen/text_medium" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

    <RelativeLayout
        android:id="@+id/container_admob"
        android:layout_width="match_parent"
        android:layout_height="@dimen/admob_height"
        android:layout_weight="0"
        android:background="@color/bg_gray_dark"
        android:gravity="center" >

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|center_vertical" />
        </FrameLayout>
    </RelativeLayout>

</LinearLayout>