<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/txt_tutorial_question_title"
        style="@style/TutorialTitle"
        android:text="@string/tutorial_question_title" />

    <TextView
        android:id="@+id/txt_tutorial_question"
        style="@style/TutorialSub"
        android:layout_below="@id/txt_tutorial_question_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/btn_no"
            style="@style/Btn.Large.White"
            android:layout_width="0dip"
            android:layout_marginRight="@dimen/margin"
            android:layout_weight="1"
            android:text="@string/no" />

        <TextView
            android:id="@+id/btn_yes"
            style="@style/Btn.Large.Theme"
            android:layout_width="0dip"
            android:layout_marginLeft="@dimen/margin"
            android:layout_weight="1"
            android:text="@string/yes" />
    </LinearLayout>

</RelativeLayout>