<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/txt_tutorial_regist_title"
        style="@style/TutorialTitle"
        android:text="@string/tutorial_regist_title" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/txt_tutorial_regist_title" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <ImageView
                android:id="@+id/clicker_img_charactor"
                android:layout_width="@dimen/icon_large"
                android:layout_height="@dimen/icon_large"
                android:layout_centerHorizontal="true"
                android:background="@drawable/bg_white_circle"
                android:clickable="true" />

            <ImageView
                android:id="@+id/img_charactor"
                android:layout_width="@dimen/icon_large"
                android:layout_height="@dimen/icon_large"
                android:layout_centerHorizontal="true"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_user_add_rounded" />

            <EditText
                android:id="@+id/edit_name"
                style="@style/EditTextAppTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/img_charactor"
                android:layout_marginTop="@dimen/margin"
                android:hint="@string/charactor_name"
                android:inputType="text"
                android:textSize="@dimen/text_medium"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edit_title"
                style="@style/EditTextAppTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/edit_name"
                android:layout_marginTop="@dimen/margin"
                android:hint="@string/charactor_title"
                android:inputType="text"
                android:textColor="@color/apptheme_color"
                android:textSize="@dimen/text_medium" />
        </RelativeLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/btn_after"
            style="@style/Btn.Large.White"
            android:layout_width="0dip"
            android:layout_marginRight="@dimen/margin"
            android:layout_weight="1"
            android:text="@string/after" />

        <TextView
            android:id="@+id/btn_regist"
            style="@style/Btn.Large.Theme"
            android:layout_width="0dip"
            android:layout_marginLeft="@dimen/margin"
            android:layout_weight="1"
            android:text="@string/regist" />
    </LinearLayout>

</RelativeLayout>