<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity" >

    <ImageView
        android:id="@+id/img_cover"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/img_login" />

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignBottom="@id/img_cover"
        android:layout_alignLeft="@id/img_cover"
        android:layout_alignRight="@id/img_cover"
        android:layout_alignTop="@id/img_cover"
        android:background="@color/bg_black_alfa_dark" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp" >

                <ImageView
                    android:id="@+id/img_logo"
                    android:layout_width="180dp"
                    android:layout_height="180dp"
                    android:layout_centerHorizontal="true"
                    android:gravity="center"
                    android:src="@drawable/ic_launcher" />

                <ImageView
                    android:id="@+id/img_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/img_logo"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:src="@drawable/img_logo" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/img_title"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/login_description"
                    android:textColor="@color/text_white"
                    android:textSize="18dp"
                    android:textStyle="bold" />
            </RelativeLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:paddingBottom="32dp"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:paddingTop="12dp" >

            <Button
                android:id="@+id/btn_login_twitter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_twitter"
                android:padding="16dp"
                android:text="@string/login_twitter"
                android:textColor="@color/text_white"
                android:textSize="@dimen/text_large" />

            <FrameLayout
                android:id="@+id/loading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/btn_login_twitter"
                android:layout_alignLeft="@id/btn_login_twitter"
                android:layout_alignRight="@id/btn_login_twitter"
                android:layout_alignTop="@id/btn_login_twitter"
                android:visibility="gone" >

                <ProgressBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|center_vertical" />
            </FrameLayout>

            <TextView
                android:id="@+id/txt_terms"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/btn_login_twitter"
                android:layout_marginTop="24dp"
                android:gravity="center"
                android:text="@string/login_terms_confirmation"
                android:textColor="@color/text_white"
                android:textSize="@dimen/text_small" />
        </RelativeLayout>
    </LinearLayout>

</RelativeLayout>